cmake_minimum_required(VERSION 3.12)
project(untitled10)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled10 main.cpp checkValid.cpp checkValid.h interface.h MyCustomer.cpp MyCustomer.h MyEmployee.cpp MyEmployee.h MyFlight.cpp MyFlight.h MyImplementation.cpp MyImplementation.h MyPlane.cpp MyPlane.h MyReservation.cpp MyReservation.h ReadFromFile.cpp ReadFromFile.h writeToFile.cpp writeToFile.h MyDate.cpp)